FIX: [10.0 RC] Wrap long words in alternative file text and limit width in small screens only. [t31864]
git-svn-id: http://svn.resourcespace.com/svn/rs/releases/10.0_RC@20404 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -1202,3 +1202,9 @@ body {
     }
     
 }
+
+@media (max-width: 850px) {
+.AlternativeFileImage, .AlternativeFileText {
+    max-width: 150px;
+    }
+}
